<resources>
    <string name="app_name">Easy Team Up</string>
    <string name="title_events">Events</string>
    <string name="title_create">Create</string>
    <string name="title_manage">Manage</string>
    <string name="events_page">events_page</string>
    <string name="create_event_page">create_event_page</string>
    <string name="manage_event_page">manage_event_page</string>
    <string name="profile_page">profile_page</string>
    <string name="button_to_registered_events">Registered Events</string>
    <string name="button_to_sent_events">Sent Events</string>
    <string name="button_to_received_events">Received Events</string>
    <string name="back_button_text">Back</string>

    <string-array name="type_array">
        <item>Sports</item>
        <item>Academic</item>
        <item>Social</item>
        <item>Food/Drink</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
</resources>