<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/events_page"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/events_page" />
    <item
        android:id="@+id/create_event_page"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/create_event_page" />
    <item
        android:id="@+id/manage_event_page"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/manage_event_page" />
    <item
        android:id="@+id/profile_page"
        android:icon="@drawable/common_google_signin_btn_icon_dark"
        android:title="@string/profile_page" />
</menu>